[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "cargo-pack"
version = "0.4.0"
description = "an infrastructure library for 'cargo-pack'ers"
repository = "https://github.com/KeenS/cargo-pack"
documentation = "https://docs.rs/cargo-pack"
license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo"]
readme = "README.md"

[dependencies]
cargo = "0.30.0"
log = "0.4.1"
serde = "1.0"
toml = "0.4.5"
serde_derive = "1.0.28"
failure = "0.1.1"
