[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "cargo-pack"
version = "0.6.0"
description = "an infrastructure library for 'cargo-pack'ers"
repository = "https://github.com/KeenS/cargo-pack"
documentation = "https://docs.rs/cargo-pack"
license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.1"
cargo_metadata = "0.9.1"
serde_json = "1.0"
